--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ecommerce</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ecommerce</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./styles.css" />
+  </head>
+  <body>
+    <app-root></app-root>
+    <script
+      src="https://kit.fontawesome.com/5cbe92252d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
